NetS13nServiceWorker: don't assume OnStartLoadingResponseBody() is called

In the current implementation, ServiceWorkerNewScriptLoader assume that
OnScriptLoadingResponseBody() is called before OnComplete(). However,
MojoAsyncResourceHandler doesn't call it when response body is empty. This CL is
to adopt that based on discussion at crbug.com/826868.

Bug: 848606, 826868
Change-Id: I46646fc2d48c51aa89e02d63c057ef42e74ebb7d
Reviewed-on: https://chromium-review.googlesource.com/1088463
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565953}
Former-commit-id: 407e4de01e534567b5c9b7e453cbdf7b79f467af